charts/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # 외부 노출용 ALB 사용
spec:
  rules:
    - http:
        paths:
          - path: /web  # 웹 서비스 접근 경로
            pathType: Prefix
            backend:
              service:
                name: petclinic-web
                port:
                  number: 80
          - path: /was  # WAS 서비스 접근 경로
            pathType: Prefix
            backend:
              service:
                name: petclinic-was
                port:
                  number: 8080
